<resources>
    <string name="app_name">Weather App</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Close App</string>
    <string name="drawer_open">Open</string>
    <string name="close">Close</string>
    <string name="nav_item_weather">Weather</string>
    <string name="nav_item_help_and_support">Help &amp; Support</string>
    <string name="nav_item_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="title_help_and_support">Help &amp; Support</string>
    <string name="about">About</string>
    <string name="unknown_error">An error occurred :(</string>
    <string name="windspeed">Windspeed</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="refresh">Refresh</string>
    <string name="downloading_data">Downloading Data&#8230;</string>
    <string name="kAF" translatable="false">AF</string>
    <string name="kAL" translatable="false">AL</string>
    <string name="kDZ" translatable="false">DZ</string>
    <string name="kAS" translatable="false">AS</string>
    <string name="kAD" translatable="false">AD</string>
    <string name="kAO" translatable="false">AO</string>
    <string name="kAI" translatable="false">AI</string>
    <string name="kAQ" translatable="false">AQ</string>
    <string name="kAG" translatable="false">AG</string>
    <string name="kAR" translatable="false">AR</string>
    <string name="kAM" translatable="false">AM</string>
    <string name="kAW" translatable="false">AW</string>
    <string name="kAU" translatable="false">AU</string>
    <string name="kAT" translatable="false">AT</string>
    <string name="kAZ" translatable="false">AZ</string>
    <string name="kBS" translatable="false">BS</string>
    <string name="kBH" translatable="false">BH</string>
    <string name="kBD" translatable="false">BD</string>
    <string name="kBB" translatable="false">BB</string>
    <string name="kBY" translatable="false">BY</string>
    <string name="kBE" translatable="false">BE</string>
    <string name="kBZ" translatable="false">BZ</string>
    <string name="kBJ" translatable="false">BJ</string>
    <string name="kBM" translatable="false">BM</string>
    <string name="kBT" translatable="false">BT</string>
    <string name="kBO" translatable="false">BO</string>
    <string name="kBA" translatable="false">BA</string>
    <string name="kBW" translatable="false">BW</string>
    <string name="kBR" translatable="false">BR</string>
    <string name="kIO" translatable="false">IO</string>
    <string name="kVG" translatable="false">VG</string>
    <string name="kBN" translatable="false">BN</string>
    <string name="kBG" translatable="false">BG</string>
    <string name="kBF" translatable="false">BF</string>
    <string name="kBI" translatable="false">BI</string>
    <string name="kKH" translatable="false">KH</string>
    <string name="kCM" translatable="false">CM</string>
    <string name="kCA" translatable="false">CA</string>
    <string name="kCV" translatable="false">CV</string>
    <string name="kKY" translatable="false">KY</string>
    <string name="kCF" translatable="false">CF</string>
    <string name="kTD" translatable="false">TD</string>
    <string name="kCL" translatable="false">CL</string>
    <string name="kCN" translatable="false">CN</string>
    <string name="kCX" translatable="false">CX</string>
    <string name="kCC" translatable="false">CC</string>
    <string name="kCO" translatable="false">CO</string>
    <string name="kKM" translatable="false">KM</string>
    <string name="kCK" translatable="false">CK</string>
    <string name="kCR" translatable="false">CR</string>
    <string name="kHR" translatable="false">HR</string>
    <string name="kCU" translatable="false">CU</string>
    <string name="kCW" translatable="false">CW</string>
    <string name="kCY" translatable="false">CY</string>
    <string name="kCZ" translatable="false">CZ</string>
    <string name="kCD" translatable="false">CD</string>
    <string name="kDK" translatable="false">DK</string>
    <string name="kDJ" translatable="false">DJ</string>
    <string name="kDM" translatable="false">DM</string>
    <string name="kDO" translatable="false">DO</string>
    <string name="kTL" translatable="false">TL</string>
    <string name="kEC" translatable="false">EC</string>
    <string name="kEG" translatable="false">EG</string>
    <string name="kSV" translatable="false">SV</string>
    <string name="kGQ" translatable="false">GQ</string>
    <string name="kER" translatable="false">ER</string>
    <string name="kEE" translatable="false">EE</string>
    <string name="kET" translatable="false">ET</string>
    <string name="kFK" translatable="false">FK</string>
    <string name="kFO" translatable="false">FO</string>
    <string name="kFJ" translatable="false">FJ</string>
    <string name="kFI" translatable="false">FI</string>
    <string name="kFR" translatable="false">FR</string>
    <string name="kPF" translatable="false">PF</string>
    <string name="kGA" translatable="false">GA</string>
    <string name="kGM" translatable="false">GM</string>
    <string name="kGE" translatable="false">GE</string>
    <string name="kDE" translatable="false">DE</string>
    <string name="kGH" translatable="false">GH</string>
    <string name="kGI" translatable="false">GI</string>
    <string name="kGR" translatable="false">GR</string>
    <string name="kGL" translatable="false">GL</string>
    <string name="kGD" translatable="false">GD</string>
    <string name="kGU" translatable="false">GU</string>
    <string name="kGT" translatable="false">GT</string>
    <string name="kGG" translatable="false">GG</string>
    <string name="kGN" translatable="false">GN</string>
    <string name="kGW" translatable="false">GW</string>
    <string name="kGY" translatable="false">GY</string>
    <string name="kHT" translatable="false">HT</string>
    <string name="kHN" translatable="false">HN</string>
    <string name="kHK" translatable="false">HK</string>
    <string name="kHU" translatable="false">HU</string>
    <string name="kIS" translatable="false">IS</string>
    <string name="kIN" translatable="false">IN</string>
    <string name="kID" translatable="false">ID</string>
    <string name="kIR" translatable="false">IR</string>
    <string name="kIQ" translatable="false">IQ</string>
    <string name="kIE" translatable="false">IE</string>
    <string name="kIM" translatable="false">IM</string>
    <string name="kIL" translatable="false">IL</string>
    <string name="kIT" translatable="false">IT</string>
    <string name="kCI" translatable="false">CI</string>
    <string name="kJM" translatable="false">JM</string>
    <string name="kJP" translatable="false">JP</string>
    <string name="kJE" translatable="false">JE</string>
    <string name="kJO" translatable="false">JO</string>
    <string name="kKZ" translatable="false">KZ</string>
    <string name="kKE" translatable="false">KE</string>
    <string name="kKI" translatable="false">KI</string>
    <string name="kKW" translatable="false">KW</string>
    <string name="kKG" translatable="false">KG</string>
    <string name="kLA" translatable="false">LA</string>
    <string name="kLV" translatable="false">LV</string>
    <string name="kLB" translatable="false">LB</string>
    <string name="kLS" translatable="false">LS</string>
    <string name="kLR" translatable="false">LR</string>
    <string name="kLY" translatable="false">LY</string>
    <string name="kLI" translatable="false">LI</string>
    <string name="kLT" translatable="false">LT</string>
    <string name="kLU" translatable="false">LU</string>
    <string name="kMO" translatable="false">MO</string>
    <string name="kMK" translatable="false">MK</string>
    <string name="kMG" translatable="false">MG</string>
    <string name="kMW" translatable="false">MW</string>
    <string name="kMY" translatable="false">MY</string>
    <string name="kMV" translatable="false">MV</string>
    <string name="kML" translatable="false">ML</string>
    <string name="kMT" translatable="false">MT</string>
    <string name="kMH" translatable="false">MH</string>
    <string name="kMR" translatable="false">MR</string>
    <string name="kMU" translatable="false">MU</string>
    <string name="kYT" translatable="false">YT</string>
    <string name="kMX" translatable="false">MX</string>
    <string name="kFM" translatable="false">FM</string>
    <string name="kMD" translatable="false">MD</string>
    <string name="kMC" translatable="false">MC</string>
    <string name="kMN" translatable="false">MN</string>
    <string name="kME" translatable="false">ME</string>
    <string name="kMS" translatable="false">MS</string>
    <string name="kMA" translatable="false">MA</string>
    <string name="kMZ" translatable="false">MZ</string>
    <string name="kMM" translatable="false">MM</string>
    <string name="kNA" translatable="false">NA</string>
    <string name="kNR" translatable="false">NR</string>
    <string name="kNP" translatable="false">NP</string>
    <string name="kNL" translatable="false">NL</string>
    <string name="kAN" translatable="false">AN</string>
    <string name="kNC" translatable="false">NC</string>
    <string name="kNZ" translatable="false">NZ</string>
    <string name="kNI" translatable="false">NI</string>
    <string name="kNE" translatable="false">NE</string>
    <string name="kNG" translatable="false">NG</string>
    <string name="kNU" translatable="false">NU</string>
    <string name="kKP" translatable="false">KP</string>
    <string name="kMP" translatable="false">MP</string>
    <string name="kNO" translatable="false">NO</string>
    <string name="kOM" translatable="false">OM</string>
    <string name="kPK" translatable="false">PK</string>
    <string name="kPW" translatable="false">PW</string>
    <string name="kPA" translatable="false">PA</string>
    <string name="kPG" translatable="false">PG</string>
    <string name="kPY" translatable="false">PY</string>
    <string name="kPE" translatable="false">PE</string>
    <string name="kPH" translatable="false">PH</string>
    <string name="kPN" translatable="false">PN</string>
    <string name="kPL" translatable="false">PL</string>
    <string name="kPT" translatable="false">PT</string>
    <string name="kPR" translatable="false">PR</string>
    <string name="unit">Units</string>
    <string name="notification">Notifications</string>
    <string name="nsummary1">Show current weather as notification</string>
    <string name="wearnotification">Android Wear</string>
    <string name="nsummary2">Show current weather on Android Wear</string>
    <string name="updaterate">Update Interval</string>
    <string name="app" translatable="false">App</string>
    <string name="stat">Anonymous statistics</string>
    <string name="translate">Translate the app</string>
    <string name="translatesummary">Help us with translating this app!</string>
    <string name="helpdev">Help us</string>
    <string name="main">Main</string>
    <string name="statsummary">Send anonymous usage statistics to the devloper</string>
    <string name="doublebacksumm">Exit app only on double back</string>
    <string name="doubleback">Double Back</string>
    <string name="language">Language</string>
    <string name="license">Open Source Licenses</string>
    <string name="backgroundprocess">Backgroundprocesses</string>
    <string name="backgroundprocesssumm">Sync Data in Background</string>
    <string name="beta_settings">Beta Settings</string>
    <string name="version">Copyright © 2015 Tomas Kostadinov \nContact: <a href="mailto:tomas.kostadinov@gmx.de">tomas.kostadinov@gmx.de</a>\nLogos © Andreas Kahlöfer</string>
    <string name="places">Recommended Places</string>
    <string name="forecast">Weatherforecast</string>
</resources>