<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/notification">

        <CheckBoxPreference
            android:title="@string/wearnotification"
            android:summary="@string/nsummary2"
            android:key="wearnotifications"
            android:defaultValue="true"
            />

        <CheckBoxPreference
            android:title="@string/backgroundprocess"
            android:summary="@string/backgroundprocesssumm"
            android:key="bgprocess"
            android:defaultValue="false"
            />

        <ListPreference
            android:entries="@array/updaterate"
            android:entryValues="@array/updateRateValues"
            android:key="updaterate"
            android:defaultValue="3"
            android:title="@string/updaterate"
            android:summary="3"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/extendet_settings">
        <CheckBoxPreference
            android:title="@string/doubleback"
            android:summary="@string/doublebacksumm"
            android:key="doubleback"
            android:defaultValue="true"
            />
    </PreferenceCategory>
</PreferenceScreen> 

