<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:iosched="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#e5e5e5">

        <ImageView
            android:src="@drawable/app_logo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:tint="#7000"
            android:layout_gravity="center|top" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="100dp"
                android:clipToPadding="false">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    iosched:cardBackgroundColor="#fff"
                    iosched:cardCornerRadius="@dimen/card_corner_radius"
                    iosched:cardElevation="@dimen/card_elevation"
                    iosched:cardPreventCornerOverlap="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="24dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/text_size_xlarge"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:autoLink="web"
                            android:text="@string/version"
                            android:textColor="@color/body_text_2"
                            android:textSize="@dimen/text_size_medium" />

                        <TextView
                            android:id="@+id/appdesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:autoLink="web"
                            android:text="string/eula_legal_text"
                            android:textColor="@color/body_text_2"
                            android:textSize="@dimen/text_size_medium" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </FrameLayout>
        </ScrollView>

    </FrameLayout>

    <!-- Button bar -->
    <LinearLayout
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:layout_gravity="bottom"
        android:layout_width="match_parent">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:text="@android:string/ok"
            android:textColor="#fff"
            android:textSize="@dimen/text_size_medium"
            android:textAllCaps="true"
            android:id="@+id/button_ok" />

        <Button
            android:id="@+id/button_license"
            android:layout_width="0dp"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/license"
            android:textSize="@dimen/text_size_medium"
            android:textAllCaps="true"
            android:textColor="#fff" />

    </LinearLayout>
</LinearLayout>